--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "prod": "vite build"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.2",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
-        "sass": "^1.71.0",
+        "sass": "^1.80.6",
         "vite": "^5.0.0"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^6.5.2",
+        "@fortawesome/fontawesome-free": "^6.6.0",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3"
