--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
         "@fortawesome/fontawesome-free": "^6.6.0",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.3",
-        "bootstrap-icons": "^1.11.3"
+        "bootstrap-icons": "^1.11.3",
+        "dotenv": "^16.4.7",
+        "express": "^4.21.2",
+        "googleapis": "^144.0.0"
     }
 }
